feat(i18n): add comprehensive translation keys for article and nomenclature forms
Add translation keys for reference, multilingual designation fields (es, en, fr), revision, purchase_price, sale_price_eur, stock_location, dimensions (net_weight, gross_weight, length, width, height, volume), logistics fields (country_of_origin, supplier_reference, customs_number), sales_type, supplier, and notes fields with their corresponding hints. Add section titles for dimensions_and_weight, weight_and_stock, urls

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -268,7 +268,51 @@
       "stock_quantity": "Stock Quantity",
       "min_stock": "Minimum Stock",
       "max_stock": "Maximum Stock",
-      "is_active": "Active Product"
+      "is_active": "Active Product",
+      "reference": "Reference",
+      "reference_hint": "Article reference",
+      "designation_es": "Designation (ES)",
+      "designation_es_hint": "Article name in Spanish",
+      "cost_price_hint": "0.00",
+      "sale_price_hint": "0.00",
+      "stock_quantity_hint": "0.000",
+      "min_stock_hint": "0.000",
+      "purchase_price": "Purchase Price",
+      "purchase_price_hint": "0.00",
+      "sale_price_eur": "Price in Euros",
+      "sale_price_eur_hint": "0.00",
+      "stock_location": "Stock Location",
+      "stock_location_hint": "Ej: A-01-03",
+      "net_weight": "Net Weight (kg)",
+      "net_weight_hint": "0.000",
+      "gross_weight": "Gross Weight (kg)",
+      "gross_weight_hint": "0.000",
+      "length": "Length (mm)",
+      "length_hint": "0.000",
+      "width": "Width (mm)",
+      "width_hint": "0.000",
+      "height": "Height (mm)",
+      "height_hint": "0.000",
+      "volume": "Volume (m³)",
+      "volume_hint": "0.000000",
+      "country_of_origin": "Country of Origin",
+      "supplier_reference": "Supplier Reference",
+      "supplier_reference_hint": "Internal supplier reference",
+      "customs_number": "Customs Number",
+      "customs_number_hint": "Customs identification number",
+      "sales_type": "Sales Type",
+      "supplier": "Supplier",
+      "designation_fr": "French Name",
+      "designation_fr_hint": "Designation en français",
+      "designation_en": "English Name",
+      "designation_en_hint": "Designation in English",
+      "revision": "Revision",
+      "revision_hint": "Ej: A, B, 1.0",
+      "notes": "Additional Notes",
+      "notes_hint": "Important notes or comments",
+      "dimensions_section": "Dimensions and Weight",
+      "logistics_section": "Logistics and Customs",
+      "additional_section": "Additional Information"
     },
     "messages": {
       "created": "Article '{name}' created successfully",
@@ -294,7 +338,7 @@
     "no_nomenclatures_message": "Start by creating your first nomenclature",
     "create_first": "Create First Nomenclature",
     "search_placeholder": "Search nomenclatures by code, name...",
-    "bom": "Bill of Materials (BOM)",
+    "bom": "List of Articles",
     "add_component": "Add Component",
     "columns": {
       "id": "ID",
@@ -323,31 +367,54 @@
       "basic_info": "Basic Information",
       "classification": "Classification",
       "pricing": "Pricing",
+      "dimensions_and_weight": "Dimensions & Weight",
+      "weight_and_stock": "Weight & Stock",
+      "urls": "URLs",
       "stock_section": "Stock & Inventory",
-      "bom_section": "Bill of Materials (BOM)",
-      "bom_placeholder": "Nomenclature components...",
+      "bom_section": "List of Articles",
+      "bom_placeholder": "Nomenclature articles...",
       "add_component": "Add Component",
+      "add_article": "Add Article",
       "select_article": "Select Article",
       "search_articles_hint": "Search by code or name...",
-      "no_articles_found": "No articles found",
-      "quantity": "Quantity",
-      "invalid_quantity": "Quantity must be a positive number",
-      "code": "Code",
-      "code_hint": "Unique nomenclature code",
-      "name": "Name",
-      "name_hint": "Descriptive name",
-      "description": "Description",
-      "description_hint": "Detailed description",
-      "type": "Product Type",
-      "unit": "Unit of Measure",
-      "family_type": "Family",
-      "matter": "Material/Matter",
+      "revision": "Revision",
+      "revision_hint": "Version identifier",
+      "reference": "Reference",
+      "reference_hint": "Unique product code",
+      "designation_es": "Designation (Spanish)",
+      "designation_es_hint": "Name in Spanish",
+      "designation_en": "Designation (English)",
+      "designation_en_hint": "Name in English",
+      "designation_fr": "Designation (French)",
+      "designation_fr_hint": "Name in French",
+      "short_designation": "Short Designation",
+      "short_designation_hint": "Abbreviated name",
+      "unit": "Unit",
+      "family_type": "Family Type",
+      "matter": "Material",
+      "sales_type": "Sales Type",
+      "purchase_price": "Purchase Price",
       "cost_price": "Cost Price",
       "sale_price": "Sale Price",
+      "sale_price_eur": "Sale Price (EUR)",
+      "length": "Length",
+      "width": "Width",
+      "height": "Height",
+      "volume": "Volume",
+      "net_weight": "Net Weight",
+      "gross_weight": "Gross Weight",
       "stock_quantity": "Stock Quantity",
-      "min_stock": "Minimum Stock",
-      "max_stock": "Maximum Stock",
-      "is_active": "Active Nomenclature"
+      "minimum_stock": "Minimum Stock",
+      "image_url": "Image URL",
+      "plan_url": "Plan URL",
+      "is_active": "Active",
+      "loading": "Loading form...",
+      "saving": "Saving...",
+      "error_loading": "Error loading form data: {error}",
+      "edit_title": "Edit Nomenclature",
+      "create_title": "Create Nomenclature",
+      "updated_success": "Nomenclature '{name}' updated successfully",
+      "created_success": "Nomenclature '{name}' created successfully"
     },
     "messages": {
       "created": "Nomenclature '{name}' created successfully",
