--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -268,7 +268,51 @@
       "stock_quantity": "Cantidad en Stock",
       "min_stock": "Stock Mínimo",
       "max_stock": "Stock Máximo",
-      "is_active": "Producto Activo"
+      "is_active": "Producto Activo",
+      "reference": "Referencia",
+      "reference_hint": "Referencia del artículo",
+      "designation_es": "Designación (ES)",
+      "designation_es_hint": "Nombre del artículo en español",
+      "cost_price_hint": "0.00",
+      "sale_price_hint": "0.00",
+      "stock_quantity_hint": "0.000",
+      "min_stock_hint": "0.000",
+      "purchase_price": "Precio de compra",
+      "purchase_price_hint": "0.00",
+      "sale_price_eur": "Precio en euros",
+      "sale_price_eur_hint": "0.00",
+      "stock_location": "Ubicación en almacén",
+      "stock_location_hint": "Ej: A-01-03",
+      "net_weight": "Peso neto (kg)",
+      "net_weight_hint": "0.000",
+      "gross_weight": "Peso bruto (kg)",
+      "gross_weight_hint": "0.000",
+      "length": "Longitud (mm)",
+      "length_hint": "0.000",
+      "width": "Ancho (mm)",
+      "width_hint": "0.000",
+      "height": "Altura (mm)",
+      "height_hint": "0.000",
+      "volume": "Volumen (m³)",
+      "volume_hint": "0.000000",
+      "country_of_origin": "País de origen",
+      "supplier_reference": "Referencia del proveedor",
+      "supplier_reference_hint": "Referencia interna del proveedor",
+      "customs_number": "Número de aduana",
+      "customs_number_hint": "Número de identificación de aduanas",
+      "sales_type": "Tipo de venta",
+      "supplier": "Proveedor",
+      "designation_fr": "Nombre en francés",
+      "designation_fr_hint": "Designation en français",
+      "designation_en": "Nombre en inglés",
+      "designation_en_hint": "Designation in English",
+      "revision": "Revisión",
+      "revision_hint": "Ej: A, B, 1.0",
+      "notes": "Notas adicionales",
+      "notes_hint": "Notas o comentarios importantes",
+      "dimensions_section": "Dimensiones y Peso",
+      "logistics_section": "Logística y Aduanas",
+      "additional_section": "Información Adicional"
     },
     "messages": {
       "created": "Artículo '{name}' creado exitosamente",
@@ -294,7 +338,7 @@
     "no_nomenclatures_message": "Comienza creando tu primera nomenclatura",
     "create_first": "Crear Primera Nomenclatura",
     "search_placeholder": "Buscar nomenclaturas por código, nombre...",
-    "bom": "Lista de Materiales (BOM)",
+    "bom": "Lista de Artículos",
     "add_component": "Agregar Componente",
     "columns": {
       "id": "ID",
@@ -323,31 +367,54 @@
       "basic_info": "Información Básica",
       "classification": "Clasificación",
       "pricing": "Precios",
+      "dimensions_and_weight": "Dimensiones y Peso",
+      "weight_and_stock": "Peso y Stock",
+      "urls": "URLs",
       "stock_section": "Stock e Inventario",
-      "bom_section": "Lista de Materiales (BOM)",
-      "bom_placeholder": "Componentes de la nomenclatura...",
+      "bom_section": "Lista de Artículos",
+      "bom_placeholder": "Artículos de la nomenclatura...",
       "add_component": "Agregar Componente",
+      "add_article": "Agregar Artículo",
       "select_article": "Seleccionar Artículo",
       "search_articles_hint": "Buscar por código o nombre...",
-      "no_articles_found": "No se encontraron artículos",
-      "quantity": "Cantidad",
-      "invalid_quantity": "La cantidad debe ser un número positivo",
-      "code": "Código",
-      "code_hint": "Código único de la nomenclatura",
-      "name": "Nombre",
-      "name_hint": "Nombre descriptivo",
-      "description": "Descripción",
-      "description_hint": "Descripción detallada",
-      "type": "Tipo de Producto",
-      "unit": "Unidad de Medida",
-      "family_type": "Familia",
-      "matter": "Material/Materia",
+      "revision": "Revisión",
+      "revision_hint": "Identificador de versión",
+      "reference": "Referencia",
+      "reference_hint": "Código único del producto",
+      "designation_es": "Designación (Español)",
+      "designation_es_hint": "Nombre en español",
+      "designation_en": "Designación (Inglés)",
+      "designation_en_hint": "Nombre en inglés",
+      "designation_fr": "Designación (Francés)",
+      "designation_fr_hint": "Nombre en francés",
+      "short_designation": "Designación Corta",
+      "short_designation_hint": "Abreviatura del nombre",
+      "unit": "Unidad",
+      "family_type": "Tipo de Familia",
+      "matter": "Material",
+      "sales_type": "Tipo de Venta",
+      "purchase_price": "Precio de Compra",
       "cost_price": "Precio de Costo",
       "sale_price": "Precio de Venta",
+      "sale_price_eur": "Precio de Venta (EUR)",
+      "length": "Largo",
+      "width": "Ancho",
+      "height": "Alto",
+      "volume": "Volumen",
+      "net_weight": "Peso Neto",
+      "gross_weight": "Peso Bruto",
       "stock_quantity": "Cantidad en Stock",
-      "min_stock": "Stock Mínimo",
-      "max_stock": "Stock Máximo",
-      "is_active": "Nomenclatura Activa"
+      "minimum_stock": "Stock Mínimo",
+      "image_url": "URL de Imagen",
+      "plan_url": "URL de Plano",
+      "is_active": "Activo",
+      "loading": "Cargando formulario...",
+      "saving": "Guardando...",
+      "error_loading": "Error al cargar datos del formulario: {error}",
+      "edit_title": "Editar Nomenclatura",
+      "create_title": "Crear Nomenclatura",
+      "updated_success": "Nomenclatura '{name}' actualizada exitosamente",
+      "created_success": "Nomenclatura '{name}' creada exitosamente"
     },
     "messages": {
       "created": "Nomenclatura '{name}' creada exitosamente",
