--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -268,7 +268,51 @@
       "stock_quantity": "Quantité en Stock",
       "min_stock": "Stock Minimum",
       "max_stock": "Stock Maximum",
-      "is_active": "Produit Actif"
+      "is_active": "Produit Actif",
+      "reference": "Référence",
+      "reference_hint": "Référence de l'article",
+      "designation_es": "Désignation (ES)",
+      "designation_es_hint": "Nom de l'article en espagnol",
+      "cost_price_hint": "0.00",
+      "sale_price_hint": "0.00",
+      "stock_quantity_hint": "0.000",
+      "min_stock_hint": "0.000",
+      "purchase_price": "Prix d'Achat",
+      "purchase_price_hint": "0.00",
+      "sale_price_eur": "Prix en Euros",
+      "sale_price_eur_hint": "0.00",
+      "stock_location": "Emplacement en Stock",
+      "stock_location_hint": "Ex: A-01-03",
+      "net_weight": "Poids Net (kg)",
+      "net_weight_hint": "0.000",
+      "gross_weight": "Poids Brut (kg)",
+      "gross_weight_hint": "0.000",
+      "length": "Longueur (mm)",
+      "length_hint": "0.000",
+      "width": "Largeur (mm)",
+      "width_hint": "0.000",
+      "height": "Hauteur (mm)",
+      "height_hint": "0.000",
+      "volume": "Volume (m³)",
+      "volume_hint": "0.000000",
+      "country_of_origin": "Pays d'Origine",
+      "supplier_reference": "Référence Fournisseur",
+      "supplier_reference_hint": "Référence interne du fournisseur",
+      "customs_number": "Numéro Douanier",
+      "customs_number_hint": "Numéro d'identification douanier",
+      "sales_type": "Type de Vente",
+      "supplier": "Fournisseur",
+      "designation_fr": "Nom en Français",
+      "designation_fr_hint": "Désignation en français",
+      "designation_en": "Nom en Anglais",
+      "designation_en_hint": "Désignation in English",
+      "revision": "Révision",
+      "revision_hint": "Ex: A, B, 1.0",
+      "notes": "Notes Additionnelles",
+      "notes_hint": "Notes ou commentaires importants",
+      "dimensions_section": "Dimensions et Poids",
+      "logistics_section": "Logistique et Douanes",
+      "additional_section": "Information Additionnelle"
     },
     "messages": {
       "created": "Article '{name}' créé avec succès",
@@ -294,7 +338,7 @@
     "no_nomenclatures_message": "Commencez par créer votre première nomenclature",
     "create_first": "Créer Première Nomenclature",
     "search_placeholder": "Rechercher nomenclatures par code, nom...",
-    "bom": "Nomenclature (BOM)",
+    "bom": "Liste d'Articles",
     "add_component": "Ajouter Composant",
     "columns": {
       "id": "ID",
@@ -323,31 +367,54 @@
       "basic_info": "Informations de Base",
       "classification": "Classification",
       "pricing": "Tarification",
+      "dimensions_and_weight": "Dimensions et Poids",
+      "weight_and_stock": "Poids et Stock",
+      "urls": "URLs",
       "stock_section": "Stock et Inventaire",
-      "bom_section": "Nomenclature (BOM)",
-      "bom_placeholder": "Composants de la nomenclature...",
+      "bom_section": "Liste d'Articles",
+      "bom_placeholder": "Articles de la nomenclature...",
       "add_component": "Ajouter Composant",
+      "add_article": "Ajouter Article",
       "select_article": "Sélectionner Article",
       "search_articles_hint": "Rechercher par code ou nom...",
-      "no_articles_found": "Aucun article trouvé",
-      "quantity": "Quantité",
-      "invalid_quantity": "La quantité doit être un nombre positif",
-      "code": "Code",
-      "code_hint": "Code unique de la nomenclature",
-      "name": "Nom",
-      "name_hint": "Nom descriptif",
-      "description": "Description",
-      "description_hint": "Description détaillée",
-      "type": "Type de Produit",
-      "unit": "Unité de Mesure",
-      "family_type": "Famille",
+      "revision": "Révision",
+      "revision_hint": "Identifiant de version",
+      "reference": "Référence",
+      "reference_hint": "Code unique du produit",
+      "designation_es": "Désignation (Espagnol)",
+      "designation_es_hint": "Nom en espagnol",
+      "designation_en": "Désignation (Anglais)",
+      "designation_en_hint": "Nom en anglais",
+      "designation_fr": "Désignation (Français)",
+      "designation_fr_hint": "Nom en français",
+      "short_designation": "Désignation Courte",
+      "short_designation_hint": "Abréviation du nom",
+      "unit": "Unité",
+      "family_type": "Type de Famille",
       "matter": "Matière",
+      "sales_type": "Type de Vente",
+      "purchase_price": "Prix d'Achat",
       "cost_price": "Prix de Revient",
       "sale_price": "Prix de Vente",
+      "sale_price_eur": "Prix de Vente (EUR)",
+      "length": "Longueur",
+      "width": "Largeur",
+      "height": "Hauteur",
+      "volume": "Volume",
+      "net_weight": "Poids Net",
+      "gross_weight": "Poids Brut",
       "stock_quantity": "Quantité en Stock",
-      "min_stock": "Stock Minimum",
-      "max_stock": "Stock Maximum",
-      "is_active": "Nomenclature Active"
+      "minimum_stock": "Stock Minimum",
+      "image_url": "URL de l'Image",
+      "plan_url": "URL du Plan",
+      "is_active": "Actif",
+      "loading": "Chargement du formulaire...",
+      "saving": "Enregistrement...",
+      "error_loading": "Erreur lors du chargement des données: {error}",
+      "edit_title": "Modifier Nomenclature",
+      "create_title": "Créer Nomenclature",
+      "updated_success": "Nomenclature '{name}' mise à jour avec succès",
+      "created_success": "Nomenclature '{name}' créée avec succès"
     },
     "messages": {
       "created": "Nomenclature '{name}' créée avec succès",
