``` feat(i18n): add translation keys for revision, reference, stock, and section titles across all languages
Add translation keys for revision, reference, supplier_reference, stock_quantity, and minimum_stock fields in article and nomenclature table columns. Add articles, stock, minimum_stock, and sales_type keys to nomenclature columns. Add designations, dimensions_section, and logistics_section keys to nomenclature form. Remove unused urls key from nomenclature form in English and French. Update

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -221,12 +221,17 @@
       "id": "ID",
       "code": "Code",
       "name": "Name",
+      "revision": "Revision",
+      "reference": "Reference",
+      "supplier_reference": "Supplier Ref.",
       "unit": "Unit",
       "cost": "Cost",
       "description": "Description",
       "status": "Status",
       "created_at": "Created At",
-      "actions": "Actions"
+      "actions": "Actions",
+      "stock_quantity": "Stock",
+      "minimum_stock": "Min. Stock"
     },
     "filters": {
       "all": "All",
@@ -344,9 +349,15 @@
       "id": "ID",
       "code": "Code",
       "name": "Name",
+      "revision": "Revision",
+      "reference": "Reference",
       "unit": "Unit",
       "components": "Components",
+      "articles": "Articles",
       "quantity": "Quantity",
+      "stock": "Stock",
+      "minimum_stock": "Min. Stock",
+      "sales_type": "Sales Type",
       "unit_cost": "Unit Cost",
       "total_cost": "Total Cost",
       "cost": "Cost",
@@ -369,7 +380,6 @@
       "pricing": "Pricing",
       "dimensions_and_weight": "Dimensions & Weight",
       "weight_and_stock": "Weight & Stock",
-      "urls": "URLs",
       "stock_section": "Stock & Inventory",
       "bom_section": "List of Articles",
       "bom_placeholder": "Nomenclature articles...",
@@ -407,6 +417,9 @@
       "minimum_stock": "Minimum Stock",
       "image_url": "Image URL",
       "plan_url": "Plan URL",
+      "designations": "Designations",
+      "dimensions_section": "Dimensions & Weight",
+      "logistics_section": "Logistics & Customs",
       "is_active": "Active",
       "loading": "Loading form...",
       "saving": "Saving...",
