--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -221,12 +221,17 @@
       "id": "ID",
       "code": "Código",
       "name": "Nombre",
+      "revision": "Revisión",
+      "reference": "Referencia",
+      "supplier_reference": "Ref. Proveedor",
       "unit": "Unidad",
       "cost": "Costo",
       "description": "Descripción",
       "status": "Estado",
       "created_at": "Fecha Creación",
-      "actions": "Acciones"
+      "actions": "Acciones",
+      "stock_quantity": "Stock",
+      "minimum_stock": "Stock Mínimo"
     },
     "filters": {
       "all": "Todos",
@@ -344,9 +349,15 @@
       "id": "ID",
       "code": "Código",
       "name": "Nombre",
+      "revision": "Revisión",
+      "reference": "Referencia",
       "unit": "Unidad",
-      "components": "Componentes",
+      "components": "Artículos",
+      "articles": "Artículos",
       "quantity": "Cantidad",
+      "stock": "Stock",
+      "minimum_stock": "Stock Mínimo",
+      "sales_type": "Tipo de Venta",
       "unit_cost": "Costo Unit.",
       "total_cost": "Costo Total",
       "cost": "Costo",
@@ -407,6 +418,7 @@
       "minimum_stock": "Stock Mínimo",
       "image_url": "URL de Imagen",
       "plan_url": "URL de Plano",
+      "designations": "Designaciones",
       "is_active": "Activo",
       "loading": "Cargando formulario...",
       "saving": "Guardando...",
