--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -221,12 +221,17 @@
       "id": "ID",
       "code": "Code",
       "name": "Nom",
+      "revision": "Révision",
+      "reference": "Référence",
+      "supplier_reference": "Ref. Fournisseur",
       "unit": "Unité",
       "cost": "Coût",
       "description": "Description",
       "status": "Statut",
       "created_at": "Date de Création",
-      "actions": "Actions"
+      "actions": "Actions",
+      "stock_quantity": "Stock",
+      "minimum_stock": "Stock Min."
     },
     "filters": {
       "all": "Tous",
@@ -344,9 +349,15 @@
       "id": "ID",
       "code": "Code",
       "name": "Nom",
+      "revision": "Révision",
+      "reference": "Référence",
       "unit": "Unité",
       "components": "Composants",
+      "articles": "Articles",
       "quantity": "Quantité",
+      "stock": "Stock",
+      "minimum_stock": "Stock Min.",
+      "sales_type": "Type de Vente",
       "unit_cost": "Coût Unit.",
       "total_cost": "Coût Total",
       "cost": "Coût",
@@ -369,7 +380,6 @@
       "pricing": "Tarification",
       "dimensions_and_weight": "Dimensions et Poids",
       "weight_and_stock": "Poids et Stock",
-      "urls": "URLs",
       "stock_section": "Stock et Inventaire",
       "bom_section": "Liste d'Articles",
       "bom_placeholder": "Articles de la nomenclature...",
@@ -407,6 +417,9 @@
       "minimum_stock": "Stock Minimum",
       "image_url": "URL de l'Image",
       "plan_url": "URL du Plan",
+      "designations": "Désignations",
+      "dimensions_section": "Dimensions et Poids",
+      "logistics_section": "Logistique et Douanes",
       "is_active": "Actif",
       "loading": "Chargement du formulaire...",
       "saving": "Enregistrement...",
