``` feat(i18n): add intracommunity_number translations for company columns and form across all languages
Add intracommunity_number and intracommunity_number_hint translation keys to companies.columns and companies.form sections in English, Spanish, and French locales. Translations include column header and form field label with hint text explaining EU intracommunity VAT number purpose.
```

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -52,6 +52,7 @@
       "city": "City",
       "website": "Website",
       "country": "Country",
+      "intracommunity_number": "Intracommunity Number",
       "status": "Status",
       "created_at": "Created At",
       "actions": "Actions"
@@ -81,6 +82,8 @@
       "email_hint": "contact@company.com",
       "website": "Website",
       "website_hint": "https://company.com",
+      "intracommunity_number": "Intracommunity Number",
+      "intracommunity_number_hint": "EU intracommunity VAT number",
       "company_type": "Company Type",
       "country": "Country",
       "is_active": "Active",
