refactor(docs): rename Branch to Plant across documentation and add migration script
Rename Branch entity to Plant throughout documentation files. Update README.md to reflect plant management feature. Fix ASCII diagram formatting in ARCHITECTURE.md and PLAN_IMPLEMENTACION_MODELOS.md. Update datetime imports to use fully qualified module path. Change relationship references from branches to plants in City model. Add migration script a2587c89b2ce to rename branches table to plants and update foreign

--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -143,7 +143,7 @@
       "delivery": "Livraison",
       "billing": "Facturation",
       "headquarters": "Siège Social",
-      "branch": "Branche"
+      "plant": "Usine"
     },
     "sections": {
       "general_info": "Informations Générales",
