--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -143,7 +143,7 @@
       "delivery": "Delivery",
       "billing": "Billing",
       "headquarters": "Headquarters",
-      "branch": "Branch"
+      "plant": "Plant"
     },
     "sections": {
       "general_info": "General Information",
