--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -143,7 +143,7 @@
       "delivery": "Entrega",
       "billing": "Facturación",
       "headquarters": "Sede Principal",
-      "branch": "Sucursal"
+      "plant": "Planta"
     },
     "sections": {
       "general_info": "Información General",
